fixed home page gallery display to not wrap

--- a/style/index.css
+++ b/style/index.css
@@ -392,7 +392,7 @@ h2 {
 }
 nav {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
   align-content: space-evenly;
@@ -410,9 +410,9 @@ a {
   color: black;
   font-size: 1.25em;
 }
-#galleryPanes {
+.galleryPanes {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: space-evenly;
   align-items: baseline;
   align-content: space-evenly;
